fixed the chat message overflow bug

--- a/client/src/pages/messenger.css
+++ b/client/src/pages/messenger.css
@@ -20,8 +20,9 @@
 }
 .chatBox{
     flex:8;
-    /* height: 100vh; */
-     overflow-y:scroll;
+    height: 80%;
+     /* overflow-y:scroll;
+} */
 }
 .chatOnline{
    display:none;
@@ -109,6 +110,11 @@ height: 100%;
 
 
 }
+chatBoxWrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .input{
 display: flex;
 /* justify-content: center;
@@ -128,9 +134,10 @@ justify-content: flex-start;
 background-color:rgba(255,255,255,0.1);
 }
 .chatBoxTop{
-    margin-top: 50px;
+    /* margin-top: 50px; */
     height: 100%;
-    /* overflow-y: scroll; */
+    width: 100%;
+    overflow-y: scroll;
 }
 .chatBoxTop::-webkit-scrollbar {display:none;}
 .searchIcon{
